added pagination and Filteration endpoint.